# todoist-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  models.rs  wrapper.rs
tests/: config.rs  error_handling_tests.rs  integration_tests.rs  models_tests.rs  wrapper_tests.rs
tests/common/: mod.rs
