[package]
name = "todoist-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper for the Todoist REST API v2"
license = "MIT"
repository = "https://github.com/romaintb/todoist-rs"
documentation = "https://docs.rs/todoist-rs"
readme = "README.md"
keywords = ["todoist", "api", "todo", "task-management"]
categories = ["api-bindings", "web-programming"]
authors = ["Romain Bertrand <romain@doxin.net>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = []
full = []
